<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailUserActivity"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/img_dtl_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_username_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/username"
        style="@style/Text.title"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_dtl_avatar"
        app:layout_constraintTop_toTopOf="@+id/img_dtl_avatar" />

    <TextView
        android:id="@+id/tv_real_name_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/real_name"
        style="@style/Text.title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_dtl_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_detail" />

    <TextView
        android:id="@+id/tv_dummy_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_following"
        style="@style/Text.content"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_dummy_followers"
        app:layout_constraintStart_toEndOf="@+id/img_dtl_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_real_name_detail" />

    <TextView
        android:id="@+id/tv_dtl_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:text="@string/total_followers"
        style="@style/Text.SubContent"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/img_dtl_avatar"
        app:layout_constraintEnd_toStartOf="@+id/tv_dtl_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_dtl_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_followers" />

    <TextView
        android:id="@+id/tv_dummy_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/total_repo"
        style="@style/Text.content"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dummy_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_real_name_detail" />

    <TextView
        android:id="@+id/tv_dtl_following"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:text="@string/total_following"
        style="@style/Text.SubContent"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/img_dtl_avatar"
        app:layout_constraintEnd_toStartOf="@+id/tv_dtl_followers"
        app:layout_constraintStart_toEndOf="@+id/img_dtl_avatar"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_following" />

    <TextView
        android:id="@+id/tv_dummy_followers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_followers"
        style="@style/Text.content"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/tv_dummy_repository"
        app:layout_constraintStart_toEndOf="@+id/tv_dummy_following"
        app:layout_constraintTop_toBottomOf="@+id/tv_real_name_detail" />

    <TextView
        android:id="@+id/tv_dtl_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/total_repo"
        style="@style/Text.SubContent"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/img_dtl_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dtl_followers"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_repository" />

    <TextView
        android:id="@+id/tv_dummy_company"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/company"
        style="@style/Text.title"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_dtl_company"
        app:layout_constraintStart_toStartOf="@+id/img_dtl_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_dtl_avatar" />

    <TextView
        android:id="@+id/tv_dtl_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/dummy"
        style="@style/Text.content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dummy_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dummy_company"
        app:layout_constraintTop_toTopOf="@+id/tv_dummy_company" />

    <TextView
        android:id="@+id/tv_dummy_location"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/location"
        style="@style/Text.title"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_dtl_location"
        app:layout_constraintStart_toStartOf="@+id/tv_dummy_company"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_company" />

    <TextView
        android:id="@+id/tv_dtl_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:text="@string/dummy"
        style="@style/Text.content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dummy_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_dummy_location"
        app:layout_constraintTop_toTopOf="@+id/tv_dummy_location" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dummy_location">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@color/white" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_fav"
        app:tint="#FF0000"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>